Fix bug - width on mobile 2

--- a/public/assets/css/base/global.css
+++ b/public/assets/css/base/global.css
@@ -7,7 +7,6 @@ html {
   padding: 0;
   height: 100vh;
   max-width: 100vw;
-  overflow-x: hidden !important;
 }
 
 body {
